# ur5-ag95-resources

./: README.md  combined_ag95.STL  requirements.txt
cobot-control/: CMakeLists.txt  README.md  package.xml
cobot-control/config/: urdf.rviz
cobot-control/launch/: changed_controllers.xml  ur5_gazebo.launch  ur5_moveit_control.launch
cobot-control/scripts/: CMakeLists.txt  README.md  basic_pick_place.py  moveToObj.py
cobot-control/scripts/adv_pick_place/: CMakeLists.txt  adv_pick_place.py  poses.yaml
cobot-control/scripts/basic_pick_place/: CMakeLists.txt  basic_pick_place.py
cobot-control/scripts/common/: e_waste_poses.yaml  poses.yaml  temp.yaml  ur5control.py
cobot-control/scripts/demo_guest/: CMakeLists.txt  demo.py
cobot-control/scripts/demo_integration/: CMakeLists.txt  demo_integrated.py
cobot-control/scripts/e_waste_scam/: CMakeLists.txt  e_waste_move.py  e_waste_plot.py  e_waste_scam.py  poses.py  video_converter.py
cobot-control/scripts/e_waste_setup/: Graph_data.csv  e_waste_move.py  e_waste_plot.py  poses.py  video_converter.py
cobot-control/scripts/single_jnt_ctrl/: CMakeLists.txt  single_jnt_ctrl.py
cobot-control/scripts/stop_resume_exe/: CMakeLists.txt  README.md  stop_resume_exe.py  stop_resume_gui.py  stop_resume_lsl.py  stop_resume_traj.py  topics.yaml
cobot-control/scripts/stop_resume_exe/resources/: stop_resume_exe.ui  stop_resume_exe_ui.py
cobot-control/scripts/traj_replace/: topics.yaml  traj_replace.py
cobot-control/src/traj_replace/: CMakeLists.txt  README.md
cobot-control/src/traj_replace/gui/: gui.cpp  gui.h  traj_replace.ui
cobot-description/: CMakeLists.txt  README.md  package.xml
cobot-description/config/: realsense-calibration.yaml  ur5.yaml  ur5_gazebo_vel_controllers.yaml  urdf.rviz
cobot-description/launch/: display.launch
cobot-description/urdf/: collide_no_contact.xacro  ur5.urdf  ur5.xacro  ur5_vel.xacro
cobot-description/urdf/ag95/: ag95.transmission.xacro  ag95.xacro  ag95_all.xacro
cobot-description/urdf/camera/: camera.plugin.xacro  camera.xacro
cobot-env/: CMakeLists.txt  README.md  package.xml
cobot-env/config/: urdf.rviz
cobot-env/include/: flight_ctrl.h  imumath.h  pid_linear.h  pid_rotate.h  plugin_altimeter.h  plugin_flight.h
cobot-env/launch/: README.md  cobot-env.launch  display.launch
cobot-env/meshes/: human_drone.STL  table_base_link.STL  table_complete.STL  table_left_leg.STL  table_right_leg.STL
cobot-env/meshes/e-waste-setup/: aa2.STL  bin_a.STL  driver2.STL  eth1.STL  eth2.STL  eth3.STL  lipo1.STL  lipo2.STL  task_board.STL  toolkit.STL
cobot-env/models/ground_custom/: model.config  model.sdf
cobot-env/scripts/: README.md
cobot-env/scripts/build_e_waste_scene/: CMakeLists.txt  build_e_waste_scene.py
cobot-env/scripts/build_scene/: CMakeLists.txt  build_scene.py
cobot-env/scripts/human_ctrl/: README.md  human_motion.py  human_motion.txt  pose_publisher.py  user_pose_input.py
cobot-env/src/: CMakeLists.txt  README.md
cobot-env/src/build_rviz_scene/: CMakeLists.txt  build_rviz_scene.cpp
cobot-env/src/flight_dependencies/: flight_ctrl.cpp  pid_linear.cpp  pid_rotate.cpp
cobot-env/src/human_drone_ctrl/: CMakeLists.txt
cobot-env/src/human_drone_ctrl/hd_key_ctrl/: CMakeLists.txt  hd_key_ctrl.cpp  hd_key_ctrl.h
cobot-env/src/human_drone_plugins/: CMakeLists.txt  plugin_altimeter.cpp  plugin_flight.cpp
cobot-env/src/ur_collisions/: CMakeLists.txt  README.md  ur_collisions.cpp  ur_collisions.h
cobot-env/urdf/: e-waste-setup.xacro  e-waste.colors.xacro  human_drone.xacro  human_drone_sensors.xacro  table.xacro
cobot-env/worlds/: actor_example.world  custom_empty.world  custom_empty_noG.world  industry.world
docs/: quick_reference_cmds.md
ur5_ag95_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
ur5_ag95_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  ur5_robot.srdf
ur5_ag95_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_practice.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_robot_moveit_controller_manager.launch.xml  warehouse.launch
