<package format="2">
  <name>cobot-env</name>
  <version>1.0.0</version>

  <description>Contains files and models describing the environment for the cobot.</description>

  <author email="mehta.mayank860@gmail.com">Mayank N. Mehta</author>

  <maintainer email="mehta.mayank860@gmail.com">Mayank N. Mehta</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models" />
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
  
</package>
